# sigil-siem

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  install-agent.sh
.github/workflows/: ci.yml  release-agent.yml  release-deb.yml
configs/: agent.example.yaml  sigil.yaml
configs/rules/: shadow_file_access.yml  ssh_brute_force_correlation.yml  ssh_failed_password.yml  sudo_to_root.yml
configs/rules/edr/: credential_file_access.yml  curl_wget_pipe_shell.yml  dns_long_query.yml  lolbin_execution.yml  persistence_cron_systemd.yml  persistence_run_key.yml  reverse_shell_network.yml  shell_from_web_server.yml  suspicious_module_load.yml  suspicious_process_lineage.yml
crates/sigil-agent/: Cargo.toml
crates/sigil-agent/src/: config.rs  main.rs  transport.rs
crates/sigil-agent/src/collector/: file.rs  mod.rs  network.rs  persistence.rs  process.rs
crates/sigil-agent/src/response/: fetch.rs  isolate.rs  kill.rs  mod.rs  quarantine.rs
crates/sigil-api/: Cargo.toml
crates/sigil-api/src/: auth.rs  config_ext.rs  dsl.rs  lib.rs  ui.html
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs  output.rs  run.rs
crates/sigil-cli/src/output/: jira.rs  misp.rs  pagerduty.rs  slack.rs
crates/sigil-cluster/: Cargo.toml
crates/sigil-cluster/src/: lib.rs  raft.rs  role.rs  shard.rs  transport.rs
crates/sigil-config/: Cargo.toml
crates/sigil-config/src/: lib.rs  plan.rs  schema.rs  validate.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: error.rs  event.rs  lib.rs  plugin.rs
crates/sigil-correlate/: Cargo.toml
crates/sigil-correlate-rl/: Cargo.toml
crates/sigil-correlate-rl/src/: lib.rs
crates/sigil-correlate/src/: attack.rs  campaign.rs  causal.rs  embed.rs  incident.rs  lib.rs  pathselect.rs  sidecar.rs  triplet.rs  vector.rs
crates/sigil-detect/: Cargo.toml
crates/sigil-detect/src/: dga.rs  ioc.rs  lib.rs
crates/sigil-edr/: Cargo.toml
crates/sigil-edr-proto/: Cargo.toml  build.rs
crates/sigil-edr-proto/src/: lib.rs
crates/sigil-edr/src/: lib.rs  map.rs  queue.rs  registry.rs  server.rs  tokens.rs
crates/sigil-edr/tests/: detections.rs  gateway.rs
crates/sigil-enrich/: Cargo.toml
crates/sigil-enrich/src/: entropy.rs  lib.rs  redact.rs  threatintel.rs
crates/sigil-eval/: Cargo.toml
crates/sigil-eval/src/: harness.rs  lib.rs  metrics.rs  scenario.rs
crates/sigil-graph/: Cargo.toml
crates/sigil-graph/src/: lib.rs
crates/sigil-index/: Cargo.toml
crates/sigil-index/src/: analytics.rs  catalog.rs  columnar.rs  lib.rs  object.rs  store.rs
crates/sigil-ingest/: Cargo.toml
crates/sigil-ingest/src/: cef.rs  codec.rs  input.rs  leef.rs  lib.rs  template.rs
crates/sigil-ml-client/: Cargo.toml  build.rs
crates/sigil-ml-client/src/: lib.rs
crates/sigil-normalize/: Cargo.toml
crates/sigil-normalize/src/: lib.rs
crates/sigil-plugin-wasm/: Cargo.toml
crates/sigil-plugin-wasm/src/: capability.rs  host.rs  lib.rs  manifest.rs  signature.rs
crates/sigil-plugin-wasm/wit/: processor.wit
crates/sigil-sigma/: Cargo.toml
crates/sigil-sigma/src/: condition.rs  correlation.rs  engine.rs  harness.rs  hunt.rs  lib.rs  matcher.rs  rule.rs
crates/sigil-store/: Cargo.toml
crates/sigil-store/src/: lib.rs
deploy/: docker-compose.yml  prometheus.yml
deploy/ansible/: .gitignore  README.md  ansible.cfg  requirements.yml  site.yml
deploy/ansible/group_vars/: all.yml
deploy/ansible/roles/common/tasks/: main.yml
deploy/ansible/roles/frontend/tasks/: main.yml
deploy/ansible/roles/grafana/tasks/: main.yml
deploy/ansible/roles/grafana/templates/: datasource.yml.j2
deploy/ansible/roles/minio/handlers/: main.yml
deploy/ansible/roles/minio/tasks/: main.yml
deploy/ansible/roles/minio/templates/: minio.env.j2  minio.service.j2
deploy/ansible/roles/ml_sidecar/handlers/: main.yml
deploy/ansible/roles/ml_sidecar/tasks/: main.yml
deploy/ansible/roles/ml_sidecar/templates/: sigil-ml.service.j2
deploy/ansible/roles/nginx/tasks/: main.yml
deploy/ansible/roles/nginx/templates/: sigil.nginx.conf.j2
deploy/ansible/roles/prometheus/tasks/: main.yml
deploy/ansible/roles/prometheus/templates/: prometheus.yml.j2
deploy/ansible/roles/redpanda/handlers/: main.yml
deploy/ansible/roles/redpanda/tasks/: main.yml
deploy/ansible/roles/redpanda/templates/: redpanda.yaml.j2
deploy/ansible/roles/sigil/handlers/: main.yml
deploy/ansible/roles/sigil/tasks/: main.yml
deploy/ansible/roles/sigil/templates/: sigil.env.j2  sigil.service.j2  sigil.yaml.j2
docs/: DESIGN.md  EDR.md  FRONTEND.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css  test-setup.ts
frontend/src/components/: AttackGraph.svelte  Badge.svelte  BarChart.svelte  Histogram.svelte  Sidebar.svelte  States.svelte  Topbar.svelte
frontend/src/components/config/: Field.svelte  ListEditor.svelte  Toggle.svelte  Wizard.svelte
frontend/src/lib/: api.test.ts  api.ts  attack.test.ts  attack.ts  auth.svelte.ts  capability.ts  download.ts  format.test.ts  format.ts  router.svelte.ts  theme.svelte.ts  token.test.ts  token.ts  types.ts
frontend/src/routes/: Admin.svelte  Agents.svelte  Alerts.svelte  Attack.svelte  Cluster.svelte  Configuration.svelte  Dashboards.svelte  Data.svelte  Detections.svelte  Entities.svelte  Eval.svelte  Hunt.svelte  Incidents.svelte  Login.svelte  Overview.svelte  Placeholder.svelte  Plugins.svelte  Search.svelte
ml-sidecar/: Dockerfile  README.md  pyproject.toml
ml-sidecar/sidecar/: __init__.py  _codegen.py  embedder.py  server.py
proto/: sigil_edr.proto  sigil_ml.proto
seeds/: README.md  campaign.jsonl  mixed-traffic.jsonl
