[package]
name = "sigil-agent"
version = "0.0.0"
edition = "2021"
publish = false
description = "Sigil EDR endpoint agent: cross-platform telemetry collection + response actions (optional; excluded from the default build)"

[[bin]]
name = "sigil-agent"
path = "src/main.rs"

[dependencies]
sigil-edr-proto = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ulid = { workspace = true }
sysinfo = { workspace = true }
notify = { workspace = true }
netstat2 = { workspace = true }
sha2 = { workspace = true }

[package.metadata.deb]
name = "sigil-agent"
maintainer = "Sigil SIEM maintainers"
copyright = "2026, Sigil SIEM contributors"
extended-description = """\
Sigil EDR endpoint agent: cross-platform telemetry collection (process, \
file, network, persistence) and response actions (isolate, kill, quarantine) \
for the Sigil SIEM (see docs/EDR.md)."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/sigil-agent", "usr/bin/sigil-agent", "755"],
    ["../../docs/EDR.md", "usr/share/doc/sigil-agent/EDR.md", "644"],
]
