[package]
name = "sigil-api"
version = "0.0.0"
edition = "2021"
publish = false
description = "Query API and query language (DESIGN section 16/17)"

[dependencies]
sigil-core = { workspace = true }
sigil-index = { workspace = true }
sigil-correlate = { workspace = true }
sigil-sigma = { workspace = true }
sigil-eval = { workspace = true }
sigil-config = { workspace = true }
sigil-store = { workspace = true }
sigil-edr = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
