[package]
name = "sigil-cli"
version = "0.0.0"
edition = "2021"
publish = false
description = "Sigil SIEM command-line entrypoint (the `sigil` binary)"
license = "Apache-2.0"

[[bin]]
name = "sigil"
path = "src/main.rs"

[features]
# S3-compatible cold/archive backend (`cluster.object_store: { kind: s3 }`).
# Passes the feature through to sigil-index so the `sigil` binary can honor an
# `s3` object store; without it, `kind: s3` configs error at startup.
s3 = ["sigil-index/s3"]

[dependencies]
sigil-core = { workspace = true }
sigil-config = { workspace = true }
sigil-ingest = { workspace = true }
sigil-normalize = { workspace = true }
sigil-enrich = { workspace = true }
sigil-index = { workspace = true }
sigil-api = { workspace = true }
sigil-sigma = { workspace = true }
sigil-detect = { workspace = true }
sigil-correlate = { workspace = true }
sigil-cluster = { workspace = true }
sigil-plugin-wasm = { workspace = true }
sigil-eval = { workspace = true }
sigil-store = { workspace = true }
sigil-edr = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
name = "sigil"
maintainer = "Sigil SIEM maintainers"
copyright = "2026, Sigil SIEM contributors"
extended-description = """\
Sigil is an open-source SIEM: a single binary that scales from one node to a \
cluster, with its own indexer, a native Sigma detection engine, a tiered \
plugin system, and semantic + causal correlation for multi-stage attack \
reconstruction."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/sigil", "usr/bin/sigil", "755"],
    ["../../configs/sigil.yaml", "etc/sigil/sigil.yaml", "644"],
    ["../../README.md", "usr/share/doc/sigil/README.md", "644"],
]
