[package]
name = "sigil-detect"
version = "0.0.0"
edition = "2021"
publish = false
description = "Custom (non-Sigma) detectors + a detector chain (DESIGN section 8/12.1)"

[dependencies]
sigil-core = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
