[package]
name = "sigil-edr"
version = "0.0.0"
edition = "2021"
publish = false
description = "Server-side EDR module: gRPC agent gateway, fleet registry, response command queue, and endpoint telemetry mapping (DESIGN §12)"

[dependencies]
sigil-core = { workspace = true }
sigil-config = { workspace = true }
sigil-store = { workspace = true }
sigil-edr-proto = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sigil-sigma = { workspace = true }
