[package]
name = "sigil-index"
version = "0.0.0"
edition = "2021"
publish = false
description = "Own indexer: Tantivy + Arrow/DataFusion + tiered storage (DESIGN section 7)"

[dependencies]
sigil-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tantivy = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
serde_yaml = { workspace = true }

[features]
# S3-compatible archive/cold backend (`object_store: { kind: s3, ... }`).
s3 = ["object_store/aws"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
