[package]
name = "sigil-ingest"
version = "0.0.0"
edition = "2021"
publish = false
description = "Inputs, codecs, template mining (DESIGN section 5)"

[dependencies]
sigil-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
