[package]
name = "sigil-sigma"
version = "0.0.0"
edition = "2021"
publish = false
description = "Sigma rule and correlation engine (DESIGN section 8)"

[dependencies]
sigil-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
